2006-08-04  Thomas Heller  <theller@python.net>

	* Fixed quite some tests to work or be skipped on Windows CE.

	* comtypes\typesinfo.py: Added ICreateTypeLib2 interface, and
	changed the CreateTypeLib function to return a pointer to that
	interface.

	* Added a COM server for testing to the comtypes.test package,
	plus tests for it.  There are still several memory leaks in
	comtypes, as the tests show.
	
2006-08-03  Thomas Heller  <theller@python.net>

	* comtypes\server\register.py: For localserver, the wrong script
	was registered when the class was not in a toplevel module.

2006-08-02  Thomas Heller  <theller@python.net>

	* Version number changed to 0.3.0, added 'comtypes.server' package
	to the setup script.

	* Merged in a LOT of changes from the upstream version.
	For details see the svn commit messages.

	The most prominent changes are:

	- The strings returned by ITypeInfo::GetDocumentation() do not
	contain NUL characters any more (some buggy typelibs contain them)

	- comtypes.client.GetEvents returns a 'connection object', which
	will UnAdvise the connection when deleted.  In other words, you
	must keep the return value of the GetEvents call as long as you
	want to reveive events.

	- Pointer to COM interface pointer instances __setitem__ method manages
	the COM refcount correctly.

	- Changes in the COM shutdown code: maybe the win32com way of
	never calling CoUninitialize() is the best compromise ;-), but I
	have not yet given up.
	
2006-07-11  Thomas Heller  <theller@python.net>

	* Imported comtypes 0.2.1 into the python.org svn repository.

2006-04-25  Thomas Heller  <theller@python.net>

	* Released version 0.2.1 (svn revision 8).

2006-03-07  Thomas Heller  <theller@python.net>

	* Imported comtypes from the ctypes CVS repository into the
	comtypes SVN repository.

2006-03-03  Thomas Heller  <theller@python.net>

	* (Repository): Move the code generator modules into the
	comtypes.tools package.  Should be refactored later - most